--- a/assets/css/mystyle.css
+++ b/assets/css/mystyle.css
@@ -6,6 +6,9 @@ body{
   box-sizing: border-box; 
   background-color: #e5e9f0;
 }
+.container-fluid{
+  overflow-x: hidden
+}
 header{
   position: relative;
 }
