--- a/assets/css/mystyle.css
+++ b/assets/css/mystyle.css
@@ -7,7 +7,7 @@ body{
   background-color: #e5e9f0;
 }
 .container-fluid{
-  overflow-x: hidden
+  overflow-x: hidden;
 }
 header{
   position: relative;
