--- a/assets/css/mystyle.css
+++ b/assets/css/mystyle.css
@@ -113,14 +113,14 @@ li.nav-item{
   padding: 15px;
   margin: auto;
 }
-#about h3,#project h3,#skills h3,#interest h3,#contacts h3{
+#about h3,#project h3,#skills h3,#interest h3,#contacts h3,#testimonials h3{
   font-weight: bold;
   text-shadow: 1.5px 1.5px #AFECDA;
   text-transform: uppercase;
 
 }
-#about h3 span,#project h3 span,#skills h3 span,#interest h3 span,#contacts h3 span{
-  border-bottom: 3px solid var(--bs-teal);
+#about h3 span,#project h3 span,#skills h3 span,#interest h3 span,#contacts h3 span,#testimonials h3 span{
+  border-bottom: 3px solid var(--bs-teal);,
 }
 
 #project{
@@ -161,6 +161,16 @@ li.nav-item{
   padding-bottom: 120px;
   background-color: white;
 }
+#testimonials{
+  height: 100%;
+}
+#testimonials h3{
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+#testimonials a{
+  color: #00A488;
+}
 #contacts{
   height: 100%;
   display: -ms-flexbox;
@@ -168,6 +178,7 @@ li.nav-item{
   -ms-flex-align: center;
   padding-top: 30px;
   padding-bottom: 100px;
+  background-color: white;
 }
 #contacts h3{
   margin-bottom: 60px;
@@ -204,4 +215,12 @@ footer ul{
 @keyframes action {
     0% { transform: translateY(0); }
     100% { transform: translateY(-10px); }
+}
+#myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  cursor: pointer; /* Add a mouse pointer on hover */
 }
